Upgrades and bugfixes
added a simple way to generate datasets from all SolO data
fixed bugs in the evaluator notebook

--- a/SBM2 configuration evaluator.ipynb
+++ b/SBM2 configuration evaluator.ipynb
@@ -24,8 +24,21 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "a5e0261e",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tform\\miniconda3\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\Users\\tform\\miniconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.GK7GX5KEQ4F6UYO3P26ULGBQYHGQO7J4.gfortran-win_amd64.dll\n",
+      "C:\\Users\\tform\\miniconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.XWYDX2IKJW2NMTWSFYNGFUWKQU3LYTCZ.gfortran-win_amd64.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    }
+   ],
    "source": [
     "# Import cell\n",
     "import numpy as np\n",
@@ -34,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "id": "fd4a8fa4",
    "metadata": {},
    "outputs": [],
@@ -68,7 +81,7 @@
     "    temp = temp.astype(int)\n",
     "    return temp, condmet\n",
     "\n",
-    "def SBM2_Find(EV, Epoch, DT):\n",
+    "def SBM2_Find0(EV, Epoch, DT):\n",
     "    counter = np.zeros(EV.size)\n",
     "    for i in  zip(*np.where(EV>0)):\n",
     "        ind = i[0]\n",
@@ -76,6 +89,15 @@
     "        t0 = t1 - DT*1e9\n",
     "        EP0 = Epoch[0:ind]\n",
     "        counter[ind] = np.sum(EV[np.where(EP0>t0)])\n",
+    "    return counter\n",
+    "\n",
+    "def SBM2_Find(ev, epoch, dt):\n",
+    "    counter = np.zeros(ev.size)\n",
+    "    temp = np.where(ev>0)\n",
+    "    for i in temp[0].tolist():\n",
+    "        t0 = epoch[i]\n",
+    "        t1 = t0 + dt*1e9\n",
+    "        counter[(epoch>=t0) & (epoch<t1)] += 1\n",
     "    return counter\n",
     "\n",
     "def get_triggers(EIRB, TH, Ep,time, delay):\n",
@@ -117,16 +139,12 @@
     "    Ep = Epoch*1e-9\n",
     "    times = np.array([])\n",
     "    for i in list(triggerinx.astype(int).tolist()):\n",
-    "        E1 = Ep[i]\n",
-    "        temp = Ep[0:i]\n",
-    "        SE = np.sum(EV[np.where(temp>E1-DT_LW)])\n",
-    "        if SE>N_LW_THRES:\n",
-    "            times = np.append(times, time[i])\n",
+    "        times = np.append(times, time[i])\n",
     "    \n",
     "    # Known dates - sbm includes known type III. events; fp includes false positives often returned by SBM2 detection algorithm.\n",
     "    # Check dates and add them to the correct list if the Evaluation cell printed 'check DATE'. \n",
-    "    sbm = ['2021/05/22','2021/05/23','2020/12/09','2020/12/10','2020/12/11','2020/12/12','2020/12/13','2020/11/18','2021/05/09','2020/11/17','2021/05/29','2020/12/14']\n",
-    "    fp  = ['2020/03/05','2021/03/11','2021/06/01','2021/06/04','2021/06/08','2021/05/10','2021/01/13','2021/01/14','2020/12/06','2020/08/31','2020/08/27','2020/08/29','2020/07/24','2020/04/19','2020/04/18','2020/05/02','2020/07/10','2020/12/17','2021/03/27','2021/03/20','2021/05/31','2021/01/05','2021/03/19','2020/12/27','2020/05/30','2020/07/23','2020/08/04','2020/11/24','2020/12/20','2021/06/07','','','','','','','','','','','','','','']\n",
+    "    sbm = ['2021/08/26','2021/05/22','2021/05/23','2020/12/09','2020/12/10','2020/12/11','2020/12/12','2020/12/13','2020/11/18','2021/05/09','2020/11/17','2021/05/29','2020/12/14']\n",
+    "    fp  = ['2020/06/12','2021/06/16','2020/03/05','2021/03/11','2021/06/01','2021/06/04','2021/06/08','2021/05/10','2021/01/13','2021/01/14','2020/12/06','2020/08/31','2020/08/27','2020/08/29','2020/07/24','2020/04/19','2020/04/18','2020/05/02','2020/07/10','2020/12/17','2021/03/27','2021/03/20','2021/05/31','2021/01/05','2021/03/19','2020/12/27','2020/05/30','2020/07/23','2020/08/04','2020/11/24','2020/12/20','2021/06/07','','','','','','','','','','','','','','']\n",
     "    \n",
     "    correct = 0\n",
     "    incorrect = 0 \n",
@@ -168,31 +186,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7c3d3ce2",
+   "execution_count": 49,
+   "id": "0588fc3d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Loading data part 1\n",
-    "with open('SBM2_raw_data_V6.pickle', 'rb') as f:\n",
-    "    FP, AMP, NR = pickle.load(f)"
+    "# Loading data\n",
+    "with open('SBM2_data_V7.2.pickle', 'rb') as f:\n",
+    "    FP, AMP, NR, time, Epoch = pickle.load(f)\n",
+    "rua=1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "36464f2b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Loading data part 2 (the data loading was split to avoid mybinder timeout errors)\n",
-    "with open('SBM2_timepos_data_V6.pickle', 'rb') as f:\n",
-    "    time, rua, Epoch, et = pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "acb79b42",
    "metadata": {},
    "outputs": [],
@@ -229,12 +236,55 @@
     "custom4  = {'EPEAK_THRES': 120, 'FP_MIN': 6000, 'FP_MAX': 50000, 'NW_THRES': 1, 'DT_LW':  600, 'N_LW_THRES': 7 , 'DT_SBM2':  7200, 'RUA': 1.0, 'title': 'custom4', 'type': 'dev - Type III optimized'}\n",
     "\n",
     "# Custom config 3 - Type III optimized\n",
-    "custom5  = {'EPEAK_THRES': 100, 'FP_MIN': 6000, 'FP_MAX': 50000, 'NW_THRES': 1, 'DT_LW':  600, 'N_LW_THRES': 8 , 'DT_SBM2':  7200, 'RUA': 1.0, 'title': 'custom5', 'type': 'dev - Type III optimized'}"
+    "custom5  = {'EPEAK_THRES': 100, 'FP_MIN': 6000, 'FP_MAX': 50000, 'NW_THRES': 1, 'DT_LW':  600, 'N_LW_THRES': 8 , 'DT_SBM2':  7200, 'RUA': 1.0, 'title': 'custom5', 'type': 'dev - Type III optimized'}\n",
+    "\n",
+    "# Flight config 1 - Flown since August 2021\n",
+    "flown_1  = {'EPEAK_THRES': 200, 'FP_MIN': 10000,'FP_MAX': 90000, 'NW_THRES': 1, 'DT_LW': 1200, 'N_LW_THRES': 5 , 'DT_SBM2':  7200, 'RUA': 1.0, 'title': 'flight_1', 'type': 'Flight - Flown since August 2021'}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
+   "id": "18553bdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not evaluating on data between Jan 20. 2021 - Mar 19. 2021\n",
+      "incorrect: 2020/06/12 - 15:09:09\n",
+      "correct: 2020/11/17 - 13:58:20\n",
+      "correct: 2020/11/18 - 19:39:56\n",
+      "correct: 2020/12/13 - 11:05:33\n",
+      "incorrect: 2020/12/27 - 08:30:11\n",
+      "correct: 2021/05/09 - 16:13:37\n",
+      "correct: 2021/05/22 - 00:20:46\n",
+      "correct: 2021/05/22 - 07:47:26\n",
+      "correct: 2021/05/23 - 05:00:51\n",
+      "correct: 2021/05/23 - 07:44:51\n",
+      "correct: 2021/05/23 - 10:14:11\n",
+      "correct: 2021/05/29 - 00:40:15\n",
+      "incorrect: 2021/06/08 - 16:01:25\n",
+      "incorrect: 2021/06/16 - 09:33:26\n",
+      "correct: 2021/08/26 - 04:15:52\n",
+      "correct: 2021/08/26 - 18:56:21\n",
+      "Total correct triggers: 12\n",
+      "Total incorrect triggers: 4\n",
+      "----------------------------------\n",
+      "Correct time in SBM2 mode: 86400s\n",
+      "Inorrect time in SBM2 mode: 28800s\n",
+      "Accuracy 0.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(flown_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "id": "00ecec51",
    "metadata": {},
    "outputs": [
@@ -258,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "id": "9916f62f",
    "metadata": {
     "scrolled": false
@@ -269,23 +319,39 @@
      "output_type": "stream",
      "text": [
       "Not evaluating on data between Jan 20. 2021 - Mar 19. 2021\n",
-      "correct: 2020/11/17 - 13:58:36\n",
-      "incorrect: 2020/12/27 - 04:46:07\n",
-      "incorrect: 2020/12/27 - 08:24:03\n",
-      "correct: 2021/05/09 - 16:20:49\n",
-      "correct: 2021/05/22 - 00:41:18\n",
-      "correct: 2021/05/22 - 07:31:58\n",
-      "correct: 2021/05/22 - 07:47:10\n",
-      "correct: 2021/05/23 - 08:56:35\n",
-      "correct: 2021/05/23 - 10:15:15\n",
-      "correct: 2021/05/23 - 11:29:07\n",
-      "incorrect: 2021/05/31 - 19:39:28\n",
-      "Total correct triggers: 8\n",
-      "Total incorrect triggers: 3\n",
+      "incorrect: 2020/07/10 - 10:37:57\n",
+      "correct: 2020/11/17 - 13:58:20\n",
+      "incorrect: 2020/12/27 - 04:45:51\n",
+      "incorrect: 2020/12/27 - 05:21:35\n",
+      "incorrect: 2020/12/27 - 07:13:23\n",
+      "incorrect: 2020/12/27 - 07:37:39\n",
+      "incorrect: 2020/12/27 - 08:15:15\n",
+      "incorrect: 2020/12/27 - 08:33:23\n",
+      "incorrect: 2020/12/27 - 09:01:23\n",
+      "correct: 2021/05/09 - 16:13:37\n",
+      "correct: 2021/05/22 - 00:41:02\n",
+      "correct: 2021/05/22 - 07:31:42\n",
+      "correct: 2021/05/22 - 07:46:54\n",
+      "correct: 2021/05/23 - 08:56:19\n",
+      "correct: 2021/05/23 - 10:14:27\n",
+      "correct: 2021/05/23 - 11:28:51\n",
+      "correct: 2021/05/23 - 11:44:03\n",
+      "correct: 2021/05/29 - 00:41:03\n",
+      "incorrect: 2021/05/31 - 19:38:56\n",
+      "incorrect: 2021/05/31 - 20:01:04\n",
+      "incorrect: 2021/06/08 - 16:01:57\n",
+      "incorrect: 2021/06/16 - 09:33:26\n",
+      "incorrect: 2021/06/16 - 09:48:38\n",
+      "incorrect: 2021/06/16 - 10:03:50\n",
+      "incorrect: 2021/06/16 - 10:22:30\n",
+      "correct: 2021/08/26 - 18:56:37\n",
+      "correct: 2021/08/26 - 19:11:49\n",
+      "Total correct triggers: 12\n",
+      "Total incorrect triggers: 15\n",
       "----------------------------------\n",
-      "Correct time in SBM2 mode: 7200s\n",
-      "Inorrect time in SBM2 mode: 2700s\n",
-      "Accuracy 0.73\n"
+      "Correct time in SBM2 mode: 10800s\n",
+      "Inorrect time in SBM2 mode: 13500s\n",
+      "Accuracy 0.44\n"
      ]
     }
    ],
@@ -295,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "id": "d8ebf38d",
    "metadata": {},
    "outputs": [
@@ -303,12 +369,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total correct triggers: 11\n",
-      "Total incorrect triggers: 5\n",
+      "Total correct triggers: 13\n",
+      "Total incorrect triggers: 11\n",
       "----------------------------------\n",
-      "Correct time in SBM2 mode: 79200s\n",
-      "Inorrect time in SBM2 mode: 36000s\n",
-      "Accuracy 0.69\n"
+      "Correct time in SBM2 mode: 93600s\n",
+      "Inorrect time in SBM2 mode: 79200s\n",
+      "Accuracy 0.54\n"
      ]
     }
    ],
@@ -318,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "id": "9d080c0c",
    "metadata": {},
    "outputs": [
@@ -326,12 +392,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total correct triggers: 12\n",
-      "Total incorrect triggers: 10\n",
+      "Total correct triggers: 17\n",
+      "Total incorrect triggers: 25\n",
       "----------------------------------\n",
-      "Correct time in SBM2 mode: 86400s\n",
-      "Inorrect time in SBM2 mode: 72000s\n",
-      "Accuracy 0.55\n"
+      "Correct time in SBM2 mode: 122400s\n",
+      "Inorrect time in SBM2 mode: 180000s\n",
+      "Accuracy 0.40\n"
      ]
     }
    ],
@@ -341,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 65,
    "id": "d3307139",
    "metadata": {},
    "outputs": [
@@ -349,12 +415,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total correct triggers: 11\n",
-      "Total incorrect triggers: 4\n",
+      "Total correct triggers: 14\n",
+      "Total incorrect triggers: 8\n",
       "----------------------------------\n",
-      "Correct time in SBM2 mode: 79200s\n",
-      "Inorrect time in SBM2 mode: 28800s\n",
-      "Accuracy 0.73\n"
+      "Correct time in SBM2 mode: 100800s\n",
+      "Inorrect time in SBM2 mode: 57600s\n",
+      "Accuracy 0.64\n"
      ]
     }
    ],
@@ -364,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "id": "14e1ab8a",
    "metadata": {
     "scrolled": false
@@ -374,12 +440,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total correct triggers: 10\n",
-      "Total incorrect triggers: 5\n",
+      "Total correct triggers: 15\n",
+      "Total incorrect triggers: 17\n",
       "----------------------------------\n",
-      "Correct time in SBM2 mode: 72000s\n",
-      "Inorrect time in SBM2 mode: 36000s\n",
-      "Accuracy 0.67\n"
+      "Correct time in SBM2 mode: 108000s\n",
+      "Inorrect time in SBM2 mode: 122400s\n",
+      "Accuracy 0.47\n"
      ]
     }
    ],
@@ -389,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 62,
    "id": "13cbcd8c",
    "metadata": {},
    "outputs": [
@@ -397,12 +463,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total correct triggers: 11\n",
-      "Total incorrect triggers: 6\n",
+      "Total correct triggers: 14\n",
+      "Total incorrect triggers: 20\n",
       "----------------------------------\n",
-      "Correct time in SBM2 mode: 79200s\n",
-      "Inorrect time in SBM2 mode: 43200s\n",
-      "Accuracy 0.65\n"
+      "Correct time in SBM2 mode: 100800s\n",
+      "Inorrect time in SBM2 mode: 144000s\n",
+      "Accuracy 0.41\n"
      ]
     }
    ],
@@ -412,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 63,
    "id": "132027bd",
    "metadata": {},
    "outputs": [
@@ -421,27 +487,34 @@
      "output_type": "stream",
      "text": [
       "Not evaluating on data between Jan 20. 2021 - Mar 19. 2021\n",
-      "correct: 2020/11/17 - 13:58:36\n",
-      "correct: 2020/11/18 - 19:40:28\n",
-      "correct: 2020/12/13 - 11:06:05\n",
-      "incorrect: 2020/12/27 - 05:03:11\n",
-      "incorrect: 2020/12/27 - 08:23:15\n",
-      "correct: 2021/05/09 - 16:13:53\n",
-      "correct: 2021/05/22 - 00:21:34\n",
-      "correct: 2021/05/22 - 04:10:54\n",
-      "correct: 2021/05/22 - 07:31:10\n",
-      "correct: 2021/05/23 - 05:02:59\n",
-      "correct: 2021/05/23 - 08:55:47\n",
-      "correct: 2021/05/23 - 11:29:07\n",
-      "correct: 2021/05/29 - 00:40:31\n",
-      "incorrect: 2021/05/31 - 19:45:04\n",
-      "incorrect: 2021/06/08 - 16:01:41\n",
-      "Total correct triggers: 11\n",
-      "Total incorrect triggers: 4\n",
+      "incorrect: 2020/05/30 - 18:08:19\n",
+      "incorrect: 2020/06/12 - 15:09:09\n",
+      "correct: 2020/11/17 - 13:58:20\n",
+      "correct: 2020/11/18 - 19:39:56\n",
+      "correct: 2020/12/13 - 11:05:33\n",
+      "incorrect: 2020/12/27 - 04:45:51\n",
+      "incorrect: 2020/12/27 - 07:14:11\n",
+      "incorrect: 2020/12/27 - 09:14:11\n",
+      "correct: 2021/05/09 - 16:13:37\n",
+      "correct: 2021/05/22 - 00:20:46\n",
+      "correct: 2021/05/22 - 04:10:38\n",
+      "correct: 2021/05/22 - 07:30:38\n",
+      "correct: 2021/05/22 - 09:30:38\n",
+      "correct: 2021/05/23 - 05:00:51\n",
+      "correct: 2021/05/23 - 07:44:51\n",
+      "correct: 2021/05/23 - 10:14:11\n",
+      "correct: 2021/05/29 - 00:40:15\n",
+      "incorrect: 2021/05/31 - 19:40:16\n",
+      "incorrect: 2021/06/08 - 16:01:25\n",
+      "incorrect: 2021/06/16 - 09:33:26\n",
+      "correct: 2021/08/26 - 04:15:52\n",
+      "correct: 2021/08/26 - 18:56:21\n",
+      "Total correct triggers: 14\n",
+      "Total incorrect triggers: 8\n",
       "----------------------------------\n",
-      "Correct time in SBM2 mode: 79200s\n",
-      "Inorrect time in SBM2 mode: 28800s\n",
-      "Accuracy 0.73\n"
+      "Correct time in SBM2 mode: 100800s\n",
+      "Inorrect time in SBM2 mode: 57600s\n",
+      "Accuracy 0.64\n"
      ]
     }
    ],
@@ -451,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 64,
    "id": "4e437a51",
    "metadata": {},
    "outputs": [
@@ -460,41 +533,50 @@
      "output_type": "stream",
      "text": [
       "Not evaluating on data between Jan 20. 2021 - Mar 19. 2021\n",
-      "incorrect: 2020/03/05 - 08:13:18\n",
-      "correct: 2020/11/17 - 13:59:08\n",
-      "incorrect: 2020/11/24 - 15:22:09\n",
-      "correct: 2020/12/13 - 10:48:45\n",
-      "incorrect: 2020/12/27 - 04:51:27\n",
-      "incorrect: 2020/12/27 - 07:50:27\n",
-      "correct: 2021/05/09 - 14:28:43\n",
-      "correct: 2021/05/09 - 16:28:49\n",
-      "correct: 2021/05/22 - 00:22:22\n",
-      "correct: 2021/05/22 - 04:15:26\n",
-      "correct: 2021/05/22 - 07:31:42\n",
-      "correct: 2021/05/23 - 08:56:35\n",
-      "correct: 2021/05/23 - 11:29:39\n",
-      "correct: 2021/05/29 - 00:41:03\n",
-      "incorrect: 2021/05/31 - 20:00:16\n",
-      "Total correct triggers: 10\n",
-      "Total incorrect triggers: 5\n",
+      "incorrect: 2020/03/05 - 08:13:08\n",
+      "incorrect: 2020/05/02 - 09:50:02\n",
+      "incorrect: 2020/05/30 - 18:03:47\n",
+      "incorrect: 2020/06/12 - 15:09:09\n",
+      "incorrect: 2020/07/10 - 03:54:45\n",
+      "incorrect: 2020/07/10 - 10:36:21\n",
+      "check 2020/07/27 - 22:58:16\n",
+      "incorrect: 2020/08/04 - 20:06:54\n",
+      "correct: 2020/11/17 - 13:58:52\n",
+      "incorrect: 2020/11/24 - 15:17:05\n",
+      "correct: 2020/12/10 - 08:11:39\n",
+      "correct: 2020/12/13 - 10:48:29\n",
+      "incorrect: 2020/12/27 - 04:44:31\n",
+      "incorrect: 2020/12/27 - 07:13:39\n",
+      "incorrect: 2020/12/27 - 09:13:39\n",
+      "correct: 2021/05/09 - 14:28:27\n",
+      "correct: 2021/05/09 - 16:28:33\n",
+      "correct: 2021/05/22 - 00:21:50\n",
+      "correct: 2021/05/22 - 04:15:10\n",
+      "correct: 2021/05/22 - 07:31:26\n",
+      "correct: 2021/05/23 - 05:04:19\n",
+      "correct: 2021/05/23 - 08:56:19\n",
+      "correct: 2021/05/23 - 11:29:23\n",
+      "correct: 2021/05/29 - 00:40:47\n",
+      "incorrect: 2021/05/31 - 19:40:48\n",
+      "incorrect: 2021/06/08 - 16:01:57\n",
+      "incorrect: 2021/06/16 - 09:33:58\n",
+      "check 2021/08/09 - 01:48:34\n",
+      "check 2021/08/19 - 17:42:45\n",
+      "correct: 2021/08/26 - 04:15:52\n",
+      "correct: 2021/08/26 - 08:51:04\n",
+      "correct: 2021/08/26 - 18:54:29\n",
+      "Total correct triggers: 15\n",
+      "Total incorrect triggers: 17\n",
       "----------------------------------\n",
-      "Correct time in SBM2 mode: 72000s\n",
-      "Inorrect time in SBM2 mode: 36000s\n",
-      "Accuracy 0.67\n"
+      "Correct time in SBM2 mode: 108000s\n",
+      "Inorrect time in SBM2 mode: 122400s\n",
+      "Accuracy 0.47\n"
      ]
     }
    ],
    "source": [
     "evaluate(custom4, loudness=1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04b0fe48",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -513,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
