Plotted graphs - October 2021
three SBM2 events on 6.10, 9.10, and 28.10

--- a/SBM2 configuration evaluator.ipynb
+++ b/SBM2 configuration evaluator.ipynb
@@ -27,18 +27,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\tform\\miniconda3\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "C:\\Users\\tform\\miniconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.GK7GX5KEQ4F6UYO3P26ULGBQYHGQO7J4.gfortran-win_amd64.dll\n",
-      "C:\\Users\\tform\\miniconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.XWYDX2IKJW2NMTWSFYNGFUWKQU3LYTCZ.gfortran-win_amd64.dll\n",
-      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import cell\n",
     "import numpy as np\n",
@@ -47,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "id": "fd4a8fa4",
    "metadata": {},
    "outputs": [],
@@ -143,8 +132,8 @@
     "    \n",
     "    # Known dates - sbm includes known type III. events; fp includes false positives often returned by SBM2 detection algorithm.\n",
     "    # Check dates and add them to the correct list if the Evaluation cell printed 'check DATE'. \n",
-    "    sbm = ['2021/08/26','2021/05/22','2021/05/23','2020/12/09','2020/12/10','2020/12/11','2020/12/12','2020/12/13','2020/11/18','2021/05/09','2020/11/17','2021/05/29','2020/12/14']\n",
-    "    fp  = ['2020/06/12','2021/06/16','2020/03/05','2021/03/11','2021/06/01','2021/06/04','2021/06/08','2021/05/10','2021/01/13','2021/01/14','2020/12/06','2020/08/31','2020/08/27','2020/08/29','2020/07/24','2020/04/19','2020/04/18','2020/05/02','2020/07/10','2020/12/17','2021/03/27','2021/03/20','2021/05/31','2021/01/05','2021/03/19','2020/12/27','2020/05/30','2020/07/23','2020/08/04','2020/11/24','2020/12/20','2021/06/07','','','','','','','','','','','','','','']\n",
+    "    sbm = ['2021/10/06','2021/10/28','2021/10/09','2021/08/26','2021/05/22','2021/05/23','2020/12/09','2020/12/10','2020/12/11','2020/12/12','2020/12/13','2020/11/18','2021/05/09','2020/11/17','2021/05/29','2020/12/14']\n",
+    "    fp  = ['2021/10/07','2020/06/12','2021/06/16','2020/03/05','2021/03/11','2021/06/01','2021/06/04','2021/06/08','2021/05/10','2021/01/13','2021/01/14','2020/12/06','2020/08/31','2020/08/27','2020/08/29','2020/07/24','2020/04/19','2020/04/18','2020/05/02','2020/07/10','2020/12/17','2021/03/27','2021/03/20','2021/05/31','2021/01/05','2021/03/19','2020/12/27','2020/05/30','2020/07/23','2020/08/04','2020/11/24','2020/12/20','2021/06/07','','','','','','','','','','','','','','']\n",
     "    \n",
     "    correct = 0\n",
     "    incorrect = 0 \n",
@@ -186,13 +175,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "0588fc3d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loading data\n",
-    "with open('SBM2_data_V7.2.pickle', 'rb') as f:\n",
+    "with open('SBM2_data_2021_V7.3.pickle', 'rb') as f:\n",
     "    FP, AMP, NR, time, Epoch = pickle.load(f)\n",
     "rua=1"
    ]
@@ -244,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "id": "18553bdf",
    "metadata": {},
    "outputs": [
@@ -253,11 +242,6 @@
      "output_type": "stream",
      "text": [
       "Not evaluating on data between Jan 20. 2021 - Mar 19. 2021\n",
-      "incorrect: 2020/06/12 - 15:09:09\n",
-      "correct: 2020/11/17 - 13:58:20\n",
-      "correct: 2020/11/18 - 19:39:56\n",
-      "correct: 2020/12/13 - 11:05:33\n",
-      "incorrect: 2020/12/27 - 08:30:11\n",
       "correct: 2021/05/09 - 16:13:37\n",
       "correct: 2021/05/22 - 00:20:46\n",
       "correct: 2021/05/22 - 07:47:26\n",
@@ -269,12 +253,16 @@
       "incorrect: 2021/06/16 - 09:33:26\n",
       "correct: 2021/08/26 - 04:15:52\n",
       "correct: 2021/08/26 - 18:56:21\n",
+      "correct: 2021/10/06 - 04:36:26\n",
+      "incorrect: 2021/10/07 - 15:24:22\n",
+      "correct: 2021/10/09 - 07:04:51\n",
+      "correct: 2021/10/28 - 16:41:40\n",
       "Total correct triggers: 12\n",
-      "Total incorrect triggers: 4\n",
+      "Total incorrect triggers: 3\n",
       "----------------------------------\n",
       "Correct time in SBM2 mode: 86400s\n",
-      "Inorrect time in SBM2 mode: 28800s\n",
-      "Accuracy 0.75\n"
+      "Inorrect time in SBM2 mode: 21600s\n",
+      "Accuracy 0.80\n"
      ]
     }
    ],
